Removing MAVEN_OPTS configuration based on version since java6 is no longer installed.